# hermes-vicon

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.config/: git-changelog.toml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  4-config.yml  config.yml
examples/: main.py  template.bat  template.sh  template.yml  vicon.bat  vicon.sh  vicon.yml  video_codec.yml
src/hermes/template/: __init__.py  consumer.py  pipeline.py  producer.py  stream.py
src/hermes/vicon/: __init__.py  data_container.py  producer.py  stream.py
